@@ -576,10 +576,14 @@ extern int sacctmgr_add_account(int argc, char *argv[])
 	
 	init_acct_association_rec(start_assoc);
 
-	for (i=0; i<argc; i++) 
-		limit_set = _set_rec(&i, argc, argv, name_list, cluster_list,
+	for (i=0; i<argc; i++) {
+		int command_len = strlen(argv[i]);
+		if (!strncasecmp (argv[i], "Where", MAX(command_len, 5))
+		    || !strncasecmp (argv[i], "Set", MAX(command_len, 3))) 
+			i++;		
+		limit_set += _set_rec(&i, argc, argv, name_list, cluster_list,
 				     start_acct, start_assoc);
-
+	}
 	if(exit_code) 
 		return SLURM_ERROR;
 
@@ -950,7 +954,13 @@ extern int sacctmgr_list_account(int argc, char *argv[])
 
 	acct_cond->with_assocs = with_assoc_flag;
 
-	set = _set_cond(&i, argc, argv, acct_cond, format_list);
+	for (i=0; i<argc; i++) {
+		int command_len = strlen(argv[i]);
+		if (!strncasecmp (argv[i], "Where", MAX(command_len, 5))
+		    || !strncasecmp (argv[i], "Set", MAX(command_len, 3))) 
+			i++;		
+		set += _set_cond(&i, argc, argv, acct_cond, format_list);
+	}
 
 	if(exit_code) {
 		destroy_acct_account_cond(acct_cond);
@@ -1482,13 +1492,13 @@ extern int sacctmgr_modify_account(int argc, char *argv[])
 		int command_len = strlen(argv[i]);
 		if (!strncasecmp (argv[i], "Where", MAX(command_len, 5))) {
 			i++;
-			cond_set = _set_cond(&i, argc, argv, acct_cond, NULL);
+			cond_set += _set_cond(&i, argc, argv, acct_cond, NULL);
 		} else if (!strncasecmp (argv[i], "Set", MAX(command_len, 3))) {
 			i++;
-			rec_set = _set_rec(&i, argc, argv, NULL, NULL, 
+			rec_set += _set_rec(&i, argc, argv, NULL, NULL, 
 					   acct, assoc);
 		} else {
-			cond_set = _set_cond(&i, argc, argv, acct_cond, NULL);
+			cond_set += _set_cond(&i, argc, argv, acct_cond, NULL);
 		}
 	}
 
@@ -1612,7 +1622,15 @@ extern int sacctmgr_delete_account(int argc, char *argv[])
 	ListIterator itr = NULL;
 	int set = 0;
 	
-	if(!(set = _set_cond(&i, argc, argv, acct_cond, NULL))) {
+	for (i=0; i<argc; i++) {
+		int command_len = strlen(argv[i]);
+		if (!strncasecmp (argv[i], "Where", MAX(command_len, 5))
+		    || !strncasecmp (argv[i], "Set", MAX(command_len, 3))) 
+			i++;		
+		set += _set_cond(&i, argc, argv, acct_cond, NULL);
+	}
+
+	if(!set) {
 		exit_code=1;
 		fprintf(stderr, 
 			" No conditions given to remove, not executing.\n");
