@@ -350,7 +350,13 @@ extern int sacctmgr_list_association(int argc, char *argv[])
 		PRINT_USER
 	};
 
-	_set_cond(&i, argc, argv, assoc_cond, format_list);
+	for (i=0; i<argc; i++) {
+		int command_len = strlen(argv[i]);
+		if (!strncasecmp (argv[i], "Where", MAX(command_len, 5))
+		    || !strncasecmp (argv[i], "Set", MAX(command_len, 3))) 
+			i++;		
+		_set_cond(&i, argc, argv, assoc_cond, format_list);
+	}
 
 	if(exit_code) {
 		destroy_acct_association_cond(assoc_cond);
